# standupbot

./: .gitignore  README.md  config.yaml  create_multi_output.swift  main.py  pyproject.toml
standupbot/: analyzer.py  app.py  audio.py  config.py  speaker.py  transcriber.py
